--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>ThirtyOne</title>
+
+    <link href="./styles/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/index.css" rel="stylesheet" type="text/css" />
+    <link href="node_modules/deck-of-cards/example/example.css" rel="stylesheet" />
   </head>
   <body>
-
-  <script src="dist/main.js"></script>
+    <div class="container">
+      <div class="table"></div>
+    </div>
+    <script src="dist/main.js"></script>
   </body>
 </html>
