--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="table"></div>
+      <div class="table">
+        <div class="zone-1"></div>
+        <div class="zone-2"></div>
+        <div class="zone-deck">
+          <div class="discard"></div>
+        </div>
+      </div>
     </div>
     <script src="dist/main.js"></script>
   </body>
