--- a/index.html
+++ b/index.html
@@ -11,8 +11,22 @@
   <body>
     <div class="container">
       <div class="table">
-        <div class="zone-1"></div>
-        <div class="zone-2"></div>
+        <div class="zone-1">
+          <div class="hand">
+            <div class="card-container"></div>
+            <div class="card-container"></div>
+            <div class="card-container"></div>
+            <div class="card-container"></div>
+          </div>
+        </div>
+        <div class="zone-2">
+          <div class="hand">
+            <div class="card-container"></div>
+            <div class="card-container"></div>
+            <div class="card-container"></div>
+            <div class="card-container"></div>
+          </div>
+        </div>
         <div class="zone-deck">
           <div class="discard"></div>
         </div>
