--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
       <div class="table">
         <div class="zone-1">
           <div class="hand">
-            <div class="card-container"></div>
-            <div class="card-container"></div>
-            <div class="card-container"></div>
-            <div class="card-container"></div>
+            <div class="card-container" data-index="0"></div>
+            <div class="card-container" data-index="1"></div>
+            <div class="card-container" data-index="2"></div>
+            <div class="card-container" data-index="3"></div>
           </div>
         </div>
         <div class="zone-2">
           <div class="hand">
-            <div class="card-container"></div>
-            <div class="card-container"></div>
-            <div class="card-container"></div>
-            <div class="card-container"></div>
+            <div class="card-container" data-index="0"></div>
+            <div class="card-container" data-index="1"></div>
+            <div class="card-container" data-index="2"></div>
+            <div class="card-container" data-index="3"></div>
           </div>
         </div>
         <div class="zone-deck">
